base/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubeinvaders
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kubeinvaders
  template:
    metadata:
      labels:
        app: kubeinvaders
    spec:
      serviceAccountName: kubeinvaders-service-account
      containers:
        - name: kubeinvaders
          image: docker.io/luckysideburn/kubeinvaders:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
